Upgrade java-17 in drools-pdp
Bumped Snapshot versions
Removed statistics related code
Upgraded java-17

Issue-ID: POLICY-4676
