# policy-management/src/main/resources/openapi/openapi.yaml
@@ -465,22 +465,7 @@ paths:
             application/yaml:
               schema:
                 $ref: '#/components/schemas/Response'
-  /lifecycle/statistics:
-    get:
-      tags:
-        - pdp-d-lifecycle
-      summary: Gets Policy Statistics
-      operationId: stats
-      responses:
-        200:
-          description: successful operation
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Response'
-            application/yaml:
-              schema:
-                $ref: '#/components/schemas/Response'
+
   /lifecycle/properties:
     get:
       tags:
@@ -2972,86 +2957,6 @@ components:
           type: string
         version:
           type: string
-    PdpEngineWorkerStatistics:
-      type: object
-      properties:
-        engineId:
-          type: string
-        engineWorkerState:
-          type: string
-          enum:
-          - UNDEFINED
-          - STOPPED
-          - READY
-          - EXECUTING
-          - STOPPING
-        engineTimeStamp:
-          type: integer
-          format: int64
-        eventCount:
-          type: integer
-          format: int64
-        lastExecutionTime:
-          type: integer
-          format: int64
-        averageExecutionTime:
-          type: number
-          format: double
-        upTime:
-          type: integer
-          format: int64
-        lastEnterTime:
-          type: integer
-          format: int64
-        lastStart:
-          type: integer
-          format: int64
-    PdpStatistics:
-      type: object
-      properties:
-        pdpInstanceId:
-          type: string
-        timeStamp:
-          type: integer
-          format: int64
-        generatedId:
-          type: integer
-          format: int64
-        pdpGroupName:
-          type: string
-        pdpSubGroupName:
-          type: string
-        policyExecutedCount:
-          type: integer
-          format: int64
-        policyExecutedSuccessCount:
-          type: integer
-          format: int64
-        policyExecutedFailCount:
-          type: integer
-          format: int64
-        policyDeployCount:
-          type: integer
-          format: int64
-        policyDeploySuccessCount:
-          type: integer
-          format: int64
-        policyDeployFailCount:
-          type: integer
-          format: int64
-        policyUndeployCount:
-          type: integer
-          format: int64
-        policyUndeploySuccessCount:
-          type: integer
-          format: int64
-        policyUndeployFailCount:
-          type: integer
-          format: int64
-        engineStats:
-          type: array
-          items:
-            $ref: '#/components/schemas/PdpEngineWorkerStatistics'
     TopicSource:
       type: object
       properties:
@@ -3554,8 +3459,6 @@ components:
             type: string
         domainMaker:
           $ref: '#/components/schemas/DomainMaker'
-        stats:
-          $ref: '#/components/schemas/PolicyStatsManager'
         environment:
           type: object
           additionalProperties:
@@ -3603,42 +3506,6 @@ components:
           $ref: '#/components/schemas/KieSession'
         fullName:
           type: string
-    PolicyStats:
-      type: object
-      properties:
-        policyExecutedCount:
-          type: integer
-          format: int64
-        policyExecutedSuccessCount:
-          type: integer
-          format: int64
-        policyExecutedFailCount:
-          type: integer
-          format: int64
-        lastExecutionTime:
-          type: integer
-          format: int64
-        averageExecutionTime:
-          type: number
-          format: double
-        totalElapsedTime:
-          type: number
-          format: double
-        birthTime:
-          type: integer
-          format: int64
-        lastStart:
-          type: integer
-          format: int64
-    PolicyStatsManager:
-      type: object
-      properties:
-        groupStat:
-          $ref: '#/components/schemas/PolicyStats'
-        subgroupStats:
-          type: object
-          additionalProperties:
-            $ref: '#/components/schemas/PolicyStats'
     Process:
       type: object
       properties:
